[project]
name = "telegram-notification"
version = "1.0.0"
description = "Telegram Notification API Gateway — send notifications via Telegram as a service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    "cryptography>=41.0.0",
    "httpx>=0.27.0",
    "redis[hiredis]>=5.0.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.0.0",
]
